--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -10,12 +10,14 @@
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="kim/css/reset.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="kim/css/introkim_style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="./css/introkim_style.css">
     <link rel="stylesheet" href="kim/css/intro_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="kim/js/introkim.js"></script>
 </head>
 
@@ -87,29 +89,29 @@
         </header>
         <main>
             <section class="main_cach">
-                <div class="inner">
-                    <div class="img_roll">
-                        <div><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
-                        <div><img src="assets/poster/1ta_scandal.jpg" alt=""></div>
-                        <div><img src="assets/poster/20241230105143534.jpg" alt=""></div>
-                        <div><img src="assets/poster/2657520230601100017.jpg" alt=""></div>
-                        <div><img src="assets/poster/3067320220811140944.jpg" alt=""></div>
-                        <div><img src="assets/poster/3423520220609091621.jpg" alt=""></div>
-                        <div><img src="assets/poster/3482520230405165819.jpg" alt=""></div>
-                        <div><img src="assets/poster/4691820221226170053.jpg" alt=""></div>
-                        <div><img src="assets/poster/825920240304155607.jpg" alt=""></div>
-                        <div><img src="assets/poster/jungnyeon.jpg" alt=""></div>
-                        <div><img src="assets/poster/miggei_seoul.jpg" alt=""></div>
-                        <div><img src="assets/poster/ppockgoon.jpg" alt=""></div>
-                        <div><img src="assets/poster/sinssajang.jpg" alt=""></div>
-                        <div><img src="assets/poster/somoon.jpg" alt=""></div>
+                <div class="swiper">
+                    <div class="img_roll swiper-wrapper">
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/poster/1543020221014112439.jpg" alt=""></div>
                     </div>
-                    <div class="txt">
-                        <p class="head_copy">Universal Emotions,</p>
-                        <p class="head_copy">Original Stories</p>
-                        <em>We discover and create our own unique stories that<br /> the world can relate to and
-                            enjoy as one.</em>
-                    </div>
+                </div>
+                <div class="txt">
+                    <p class="head_copy">Universal Emotions,</p>
+                    <p class="head_copy">Original Stories</p>
+                    <em>We discover and create our own unique stories that<br /> the world can relate to and
+                        enjoy as one.</em>
                 </div>
             </section>
             <section class="info-g">
