--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="./css/introkim_style.css">
-    <link rel="stylesheet" href="kim/css/intro_media.css">
+    <link rel="stylesheet" href="./css/intro_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
