시간 카운터 수정

--- a/viewer’splayground_moon.html
+++ b/viewer’splayground_moon.html
@@ -4,18 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="스튜디오드래곤의 Viewer’s Playground Page입니다. ">
-  <meta name="keywotrds" content="스튜디오드래곤, 드라마, 제작사, tvn, CJENM, 공모전, 팬 커뮤니티, 브랜드">
+  <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
   <meta name="author" content="Luna">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/main_media.css">
   <link rel="stylesheet" href="./moon/css/pg-style.css">
   <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="./js/common.js"></script>
-  <script src="./moon/js/playground.js"></script>
+  <script defer src="./js/common.js"></script>
+  <script defer src="./moon/js/playground.js"></script>
   <title>Viewer’s Playground Page</title>
 </head>
 
@@ -184,8 +185,11 @@
                 </ul>
               </div><!-- .txtbox -->
             </div><!-- .award-info -->
-
-
+            <img class="gold" src="gold.png" />
+            <div class="circles">
+              <div class="blur-1"></div>
+              <div class="blur-2"></div>
+            </div>
           </div><!-- .video-content-box -->
           <div class="video-content-box">
             <iframe
