--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -18,7 +18,7 @@
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="kim/js/introkim.js"></script>
+    <script src="./js/introkim.js"></script>
 </head>
 
 <body>
