승주메인건드림

--- a/main_beck copy.html
+++ b/main_beck copy.html
@@ -148,12 +148,20 @@
                         <img src="./back/img/CS_img3.png" alt="pro bono" data-aos="fade-up" data-aos-delay="500"
                             data-aos-mirror="true">
                         <div class="txt">
-                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">pro bono</h3>
-                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVING <br> 2025~2026
+                            <h3 data-aos="fade-left" data-aos-delay="800" data-aos-mirror="true">pro bono</h3>
+                            <p data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">TVING <br> 2025~2026
                             </p>
                         </div>
                     </div>
                 </div>
+            </section>
+
+
+            <section class="OnAir">
+                <div class="OA_contents01"></div>
+                <div class="OA_contents02"></div>
+                <div class="OA_contents03"></div>
+
             </section>
 
 
