--- a/main_beck.html
+++ b/main_beck.html
@@ -18,6 +18,7 @@
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/common.js"></script>
+    <script src="./back/js/MainBack.js"></script>
 </head>
 
 <body>
