학원에서 저장

--- a/viewer’splayground_moon.html
+++ b/viewer’splayground_moon.html
@@ -185,7 +185,7 @@
                 </ul>
               </div><!-- .txtbox -->
             </div><!-- .award-info -->
-            <img class="gold" src="gold.png" />
+            <img class="gold" src="../StudioDragon/moon/asset/gold.png" />
             <div class="circles">
               <div class="blur-1"></div>
               <div class="blur-2"></div>
@@ -221,7 +221,7 @@
                 </ul>
               </div><!-- .txtbox -->
             </div><!-- .award-info -->
-            <img class="silver" src="silver0.png" />
+            <img class="silver" src="../StudioDragon/moon/asset/silver.png" />
             <div class="circles">
               <div class="blur-1"></div>
               <div class="blur-2"></div>
@@ -232,7 +232,8 @@
               src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
               title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
             <div class="award-info">
               <h3 class="award">Popular Choice</h3>
               <div class="txtbox">
@@ -256,7 +257,7 @@
                 </ul>
               </div><!-- .txtbox -->
             </div><!-- .award-info -->
-            <img class="silver2" src="silver1.png" />
+            <img class="popular" src="../StudioDragon/moon/asset/popular.png" />
             <div class="circles">
               <div class="blur-1"></div>
               <div class="blur-2"></div>
