--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -108,15 +108,15 @@
                     </div>
                 </div>
                 <div class="txt">
-                    <p class="head_copy">Universal Emotions,</p>
-                    <p class="head_copy">Original Stories</p>
+                    <p class="head_copy first">Universal Emotions,</p>
+                    <p class="head_copy second">Original Stories</p>
                     <em>We discover and create our own unique stories that<br /> the world can relate to and
                         enjoy as one.</em>
                 </div>
             </section>
             <section class="info-g">
                 <div class="inner">
-                    <h3>Korea's Leading<br />Scripted TV Studio</h3>
+                    <h3 class="tit">Korea's Leading<br />Scripted TV Studio</h3>
                     <div class="icon_info">
                         <ul>
                             <li>
