1022 수정할게여!

--- a/List of works_lee.html
+++ b/List of works_lee.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main_media.css">
   <script src="./lee/js/filter.js"></script>
-  <script src="js/common.js"></script>
+  <script src="./lee/css/style.css"></script>
   <!-- GSAP Core -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
@@ -90,7 +90,11 @@
     </header>
 
 
-    <div class="zoom-container">
+    <!-- https://codepen.io/iamryanyu/pen/PwZoovK -->
+
+
+
+    <!--     <div class="zoom-container">
       <h1 class="heading">StudioDragon<br />list of work</h1>
       <div class="zoom-item" data-layer="2">
         <img src="/lee/img/comingsoon/the glory.webp" alt="">
@@ -128,7 +132,7 @@
       <div class="zoom-item" data-layer="1">
         <img src="/lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
       </div>
-    </div>
+    </div> -->
     <!--     <section class="section-stick min-h-screen bg-black flex justify-center items-center text-white">
       <p class="opacity-reveal text-7xl text-center w-3/5">If you’re lucky, Studio Dragon will come into your story,
         steal your heart, and change the world.</p>
@@ -136,23 +140,23 @@
 
 
 
-    <!--    <div class="signature-works">
+    <!--     <div class="signature-works">
       <h2 class="tit_eng">SIGNATURE WORKS</h2>
+    </div>
+    <div class="sw_img">
+      <div class="sw_item">
+        <img src="./lee/img/Queen of Tears.webp" alt="">
+        <p>Queen of Tears</p>
+      </div>
+      <div class="sw_item">
+        <img src="./lee/img/The Glory4.jpg" alt="">
+        <p>The Glory</p>
+      </div>
+      <div class="sw_item">
+        <img src="./lee/img/Marry My Husband.jpg" alt="">
+        <p>Marry My Husband</p>
+      </div>
     </div> -->
-    <!--       <div class="sw_img">
-        <div class="sw_item">
-          <img src="./lee/img/Queen of Tears.webp" alt="">
-          <p>Queen of Tears</p>
-        </div>
-        <div class="sw_item">
-          <img src="./lee/img/The Glory4.jpg" alt="">
-          <p>The Glory</p>
-        </div>
-        <div class="sw_item">
-          <img src="./lee/img/Marry My Husband.jpg" alt="">
-          <p>Marry My Husband</p>
-        </div>
-      </div> -->
 
 
 
