--- a/List of works_lee.html
+++ b/List of works_lee.html
@@ -90,53 +90,54 @@
     </header>
 
 
-    <!-- https://codepen.io/iamryanyu/pen/PwZoovK -->
+    <!-- https://codepen.io/iamryanyu/pen/PwZoovK !!!!!!!!!!-->
+    <!-- https://codepen.io/daniel-mu-oz/pen/gbaVNwL -->
 
 
 
-    <!--     <div class="zoom-container">
+    <div class="zoom-container">
       <h1 class="heading">StudioDragon<br />list of work</h1>
       <div class="zoom-item" data-layer="2">
-        <img src="/lee/img/comingsoon/the glory.webp" alt="">
+        <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="">
       </div>
       <div class="zoom-item" data-layer="2">
-        <img src="/lee/img/comingsoon/Genie, Make A Wish(sd).jpg" alt="" />
+        <img src="lee/img/comingsoon/Genie, Make A Wish(sd).jpg" alt="" />
       </div>
       <div class="zoom-item" data-layer="1">
-        <img src="/lee/img/comingsoon/Genie, Make A Wish(sd2).jpg" alt="" />
+        <img src="lee/img/comingsoon/Genie, Make A Wish(sd2).jpg" alt="" />
       </div>
       <div class="zoom-item" data-layer="2">
-        <img src="/lee/img/comingsoon/Hotel Del Luna.webp" alt="" />
+        <img src="lee/img/comingsoon/Hotel Del Luna.webp" alt="" />
       </div>
       <div class="zoom-item" data-layer="3">
-        <img src="/lee/img/comingsoon/When the Stars Gossip.webp" alt="" />
+        <img src="lee/img/comingsoon/When the Stars Gossip.webp" alt="" />
       </div>
       <div class="zoom-item" data-layer="1">
-        <img src="/lee/img/comingsoon/Our Unwritten Seoul2.jpg" alt="" />
+        <img src="lee/img/comingsoon/Our Unwritten Seoul2.jpg" alt="" />
       </div>
       <div class="zoom-item" data-layer="3">
-        <img src="/lee/img/comingsoon/Genie, Make A Wish(sd5).jpg" alt="" />
+        <img src="lee/img/comingsoon/Genie, Make A Wish(sd5).jpg" alt="" />
       </div>
       <div class="zoom-item" data-layer="3">
-        <img src="/lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="" />
+        <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="" />
       </div>
       <div class="zoom-item" data-layer="1">
-        <img src="/lee/img/comingsoon/Queen of Tears1-2.webp" alt="" />
+        <img src="lee/img/comingsoon/Queen of Tears1-2.webp" alt="" />
       </div>
       <div class="zoom-item" data-layer="3">
-        <img src="/lee/img/comingsoon/Doona!.webp" alt="" />
+        <img src="lee/img/comingsoon/Doona!.webp" alt="" />
       </div>
       <div class="zoom-item" data-layer="2">
-        <img src="/lee/img//comingsoon/Our Unwritten Seoul3.jpg" alt="" />
+        <img src="lee/img//comingsoon/Our Unwritten Seoul3.jpg" alt="" />
       </div>
       <div class="zoom-item" data-layer="1">
-        <img src="/lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
+        <img src="lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
       </div>
-    </div> -->
-    <!--     <section class="section-stick min-h-screen bg-black flex justify-center items-center text-white">
+    </div>
+    <section class="section-stick min-h-screen bg-black flex justify-center items-center text-white">
       <p class="opacity-reveal text-7xl text-center w-3/5">If you’re lucky, Studio Dragon will come into your story,
         steal your heart, and change the world.</p>
-    </section> -->
+    </section>
 
 
 
