커밋할게유!!

--- a/List of works_lee.html
+++ b/List of works_lee.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main_media.css">
   <script src="./lee/js/filter.js"></script>
-  <script src="./lee/css/style.css"></script>
   <!-- GSAP Core -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
@@ -131,7 +130,7 @@
         <img src="lee/img//comingsoon/Our Unwritten Seoul3.jpg" alt="" />
       </div>
       <div class="zoom-item" data-layer="1">
-        <img src="lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
+        <img src="/lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
       </div>
     </div>
     <section class="section-stick min-h-screen bg-black flex justify-center items-center text-white">
