--- a/List of works_lee.html
+++ b/List of works_lee.html
@@ -93,7 +93,6 @@
     <!-- https://codepen.io/daniel-mu-oz/pen/gbaVNwL -->
 
 
-
     <div class="zoom-container">
       <h1 class="heading">StudioDragon<br />list of work</h1>
       <div class="zoom-item" data-layer="2">
@@ -262,6 +261,23 @@
       </div>
     </div>
 
+
+    <div class="pagination-search">
+      <div class="search-box">
+        <input type="text" placeholder="Search for a drama title..." />
+        <button type="button">Search</button>
+      </div>
+
+      <div class="page-numbers">
+        <a href="#" class="page active">1</a>
+        <a href="#" class="page">2</a>
+        <a href="#" class="page">3</a>
+        <a href="#" class="page">4</a>
+        <a href="#" class="page">5</a>
+        <span class="dots">...</span>
+        <a href="#" class="page">Next ›</a>
+      </div>
+    </div>
 
 
 
