--- a/List of works_lee.html
+++ b/List of works_lee.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main_media.css">
-  <script src="./lee/js/filter.js"></script>
   <!-- GSAP Core -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
@@ -18,6 +17,8 @@
 
   <!-- SplitText 플러그인 -->
   <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script>
+
+  <script src="./lee/js/filter.js" defer></script>
   <title>list of work</title>
 </head>
 
@@ -92,49 +93,51 @@
     <!-- https://codepen.io/iamryanyu/pen/PwZoovK !!!!!!!!!!-->
     <!-- https://codepen.io/daniel-mu-oz/pen/gbaVNwL -->
 
+    <section class="main_visual">
+      <div class="zoom_container">
+        <h1 class="main_heading">StudioDragon<br />list of work</h1>
+        <div class="zoom_item" data-layer="2">
+          <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="">
+        </div>
+        <div class="zoom_item" data-layer="2">
+          <img src="lee/img/comingsoon/Genie, Make A Wish(sd).jpg" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="1">
+          <img src="lee/img/comingsoon/Genie, Make A Wish(sd2).jpg" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="2">
+          <img src="lee/img/comingsoon/Hotel Del Luna.webp" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="3">
+          <img src="lee/img/comingsoon/When the Stars Gossip.webp" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="1">
+          <img src="lee/img/comingsoon/Our Unwritten Seoul2.jpg" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="3">
+          <img src="lee/img/comingsoon/Genie, Make A Wish(sd5).jpg" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="3">
+          <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="1">
+          <img src="lee/img/comingsoon/Queen of Tears1-2.webp" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="3">
+          <img src="lee/img/comingsoon/Doona!.webp" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="2">
+          <img src="lee/img//comingsoon/Our Unwritten Seoul3.jpg" alt="" />
+        </div>
+        <div class="zoom_item" data-layer="1">
+          <img src="/lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
+        </div>
+      </div>
 
-    <div class="zoom-container">
-      <h1 class="heading">StudioDragon<br />list of work</h1>
-      <div class="zoom-item" data-layer="2">
-        <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="">
+      <div class="text_reveal_section">
+        <p class="opacity_reveal">If you're lucky, Studio Dragon will come into your story,
+          steal your heart, and change the world.</p>
       </div>
-      <div class="zoom-item" data-layer="2">
-        <img src="lee/img/comingsoon/Genie, Make A Wish(sd).jpg" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="1">
-        <img src="lee/img/comingsoon/Genie, Make A Wish(sd2).jpg" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="2">
-        <img src="lee/img/comingsoon/Hotel Del Luna.webp" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="3">
-        <img src="lee/img/comingsoon/When the Stars Gossip.webp" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="1">
-        <img src="lee/img/comingsoon/Our Unwritten Seoul2.jpg" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="3">
-        <img src="lee/img/comingsoon/Genie, Make A Wish(sd5).jpg" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="3">
-        <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="1">
-        <img src="lee/img/comingsoon/Queen of Tears1-2.webp" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="3">
-        <img src="lee/img/comingsoon/Doona!.webp" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="2">
-        <img src="lee/img//comingsoon/Our Unwritten Seoul3.jpg" alt="" />
-      </div>
-      <div class="zoom-item" data-layer="1">
-        <img src="/lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
-      </div>
-    </div>
-    <section class="section-stick min-h-screen bg-black flex justify-center items-center text-white">
-      <p class="opacity-reveal text-7xl text-center w-3/5">If you’re lucky, Studio Dragon will come into your story,
-        steal your heart, and change the world.</p>
     </section>
 
 
